--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,7 @@ body {font-family: Oswald;margin:0}
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
