--- a/css/cte.css
+++ b/css/cte.css
@@ -15,26 +15,50 @@ background-size: cover;
   float: left;
   text-align: center;
   width: 33.33%;
-  background-color: #45c695;
+  background-color: #007caf;
+  border-style: solid;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-left-style:none;
+  border-right-style:none;
+  border-color:#ff8000;
+  border-width: 3px;
+  box-shadow:2px 0px 5.5px;
 }
 #left:hover {
-  background-color: #2CAD7C;
+  background-color: #006396;
 }
 #center:hover {
-  background-color: #2CAD7C;
+  background-color: #006396;
 }
 #right:hover {
-  background-color: #2CAD7C;
+  background-color: #006396;
 }
 #center {
   float: left;
   text-align: center;
   width: 33.33%;
-  background-color: #45c695;
+  background-color: #007caf;
+  border-style: solid;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-left-style:none;
+  border-right-style:none;
+  border-color:#ff8000;
+  border-width: 3px;
+  box-shadow:2px 0px 5.5px;
 }
 #right {
   float: left;
   width: 33.33%;
   text-align: center;
-  background-color: #45c695;
+  background-color: #007caf;
+  border-style: solid;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-left-style:none;
+  border-right-style:none;
+  border-color:#ff8000;
+  border-width: 3px;
+  box-shadow:2px 0px 5.5px;
 }
