--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,19 @@ section.content {
   height: 230px;
 }
 #slide5{
-background-color: #45c695;
-height: 100px;
-padding: 65px 0 0 0;
-background-size: cover;
+  background-color: #007caf;
+  border-style: solid;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-left-style:none;
+  border-right-style:none;
+  border-color:#ff8000;
+  border-width: 3px;
+  box-shadow:2px 0px 5.5px;
+  height: 100px;
+  padding: 65px 0 0 0;
+  background-size: cover;
 }
 #slide5:hover {
-  background-color: #2CAD7C;
+  background-color: #006396;
 }
