--- a/css/style.css
+++ b/css/style.css
@@ -106,13 +106,13 @@ section.content {
   height: 230px;
 }
 #slide5{
-  background-color: #00cc44;
+  background-color: #437c49;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#800000;
+  border-color:#791313;
   border-width: 3px;
   box-shadow:2px 0px 5.5px;
   height: 100px;
