--- a/css/cte.css
+++ b/css/cte.css
@@ -15,36 +15,39 @@ background-size: cover;
   float: left;
   text-align: center;
   width: 33.33%;
-  background-color: #007caf;
+  background-color: #437c49;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#ff8000;
+  border-color:#791313;
   border-width: 3px;
   box-shadow:2px 0px 5.5px;
 }
 #left:hover {
-  background-color: #006396;
+  background-color: #2d5330;
+  color: #fff;
 }
 #center:hover {
-  background-color: #006396;
+  background-color: #2d5330;
+  color: #fff;
 }
 #right:hover {
-  background-color: #006396;
+  background-color: #2d5330;
+  color: #fff;
 }
 #center {
   float: left;
   text-align: center;
   width: 33.33%;
-  background-color: #007caf;
+   background-color: #437c49;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#ff8000;
+  border-color:#791313;
   border-width: 3px;
   box-shadow:2px 0px 5.5px;
 }
@@ -52,13 +55,13 @@ background-size: cover;
   float: left;
   width: 33.33%;
   text-align: center;
-  background-color: #007caf;
+  background-color: #437c49;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#ff8000;
+  border-color:#791313;
   border-width: 3px;
   box-shadow:2px 0px 5.5px;
 }
