--- a/css/design.css
+++ b/css/design.css
@@ -28,13 +28,13 @@ section.work {
    float: right;
  }
  .emblem {
-   background-color: #007caf;
-   border-style: solid;
-   border-top-style:solid;
-   border-bottom-style:solid;
-   border-left-style:none;
-   border-right-style:none;
-   border-color:#ff8000;
+   background-color: #437c49;
+  border-style: solid;
+  border-top-style:solid;
+  border-bottom-style:solid;
+  border-left-style:none;
+  border-right-style:none;
+  border-color:#791313;
    border-width: 3px;
    box-shadow:2px 0px 5.5px;
    margin-bottom: 10px;
