--- a/css/classes.css
+++ b/css/classes.css
@@ -53,8 +53,9 @@ background-size: cover;
   margin-bottom: 20px
 }
 .tag:hover {
-  background-color: #2d5330;
+  background-color: #36633a;
   text-decoration: underline;
+  color: #fff;
 }
 
 #biz1, #biz2, #biz3, #biz7, #biz8, #biz9, #cs4,#cs5,#cs6, #em2, #em3, #em4, #hs2, #hs3, #hs4, #hum2, #hum3, #hum4, #vc2, #vc3,#vc4, #vc8, #vc9,#vc10{
