--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,6 @@ section.content {
   background-size: cover;
 }
 #slide5:hover {
-  background-color: #2d5330;
+  background-color: #36633a;
   color: #fff;
 }
