--- a/css/classes.css
+++ b/css/classes.css
@@ -50,7 +50,7 @@ background-size: cover;
   padding-top: 40px;
   background-color: #437c49;
   box-shadow: 10px 0px 20px;
-  margin-bottom: 20px
+  margin-bottom: 20px;
 }
 .tag:hover {
   background-color: #36633a;
