--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,5 @@
 #desbkgd{
-background:url('../img/arphoto.jpg') 50% 0 no-repeat fixed;
+background:url('../img/brain.jpg') 50% 0 no-repeat fixed;
 color: #fff;
 height: 400px;
 margin: 0;
