--- a/css/classes.css
+++ b/css/classes.css
@@ -48,24 +48,24 @@ background-size: cover;
   height: 80px;
   font-family: Oswald;
   padding-top: 40px;
-  background-color: #437c49;
+  background-color: #90AFC5;
   box-shadow: 10px 0px 20px;
   margin-bottom: 20px;
 }
 .tag:hover {
-  background-color: #36633a;
+  background-color: #2A3132;
   text-decoration: underline;
 
 }
 
 #biz1, #biz2, #biz3, #biz7, #biz8, #biz9, #cs4,#cs5,#cs6, #em2, #em3, #em4, #hs2, #hs3, #hs4, #hum2, #hum3, #hum4, #vc2, #vc3,#vc4, #vc8, #vc9,#vc10{
-  background-color: #437c49;
+  background-color: #90AFC5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2A3132;
   border-width: 3px;
-  box-shadow:2px 0px 5.5px;
+  box-shadow:0px 0px 0px;
 }
