--- a/css/cte.css
+++ b/css/cte.css
@@ -1,7 +1,7 @@
 #cte1{
 background:url('../img/pen-tablet.jpg') 50% 0 no-repeat fixed;
 color: #fff;
-height: 150px;
+height: 20px;
 margin: 0;
 padding: 200px 0 260px 0;
 background-size: cover;
@@ -15,53 +15,53 @@ background-size: cover;
   float: left;
   text-align: center;
   width: 33.33%;
-  background-color: #437c49;
+  background-color: #90afc5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2A3132;
   border-width: 3px;
-  box-shadow:2px 0px 5.5px;
+  box-shadow:0px 0px 0px;
 }
 #left:hover {
-  background-color: #36633a;
+  background-color: #90afc5;
 
 }
 #center:hover {
-  background-color: #36633a;
+  background-color: #90afc5;
 
 }
 #right:hover {
-  background-color: #36633a;
+  background-color: #90afc5;
 
 }
 #center {
   float: left;
   text-align: center;
   width: 33.33%;
-   background-color: #437c49;
+   background-color: #90afc5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2A3132;
   border-width: 3px;
-  box-shadow:2px 0px 5.5px;
+  box-shadow:0px 0px 0px;
 }
 #right {
   float: left;
   width: 33.33%;
   text-align: center;
-  background-color: #437c49;
+  background-color: #90afc5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2A3132;
   border-width: 3px;
-  box-shadow:2px 0px 5.5px;
+  box-shadow:0px 0px 0px;
 }
