--- a/css/design.css
+++ b/css/design.css
@@ -1,7 +1,7 @@
 #desbkgd{
 background:url('../img/brain.jpg') 50% 0 no-repeat fixed;
 color: #fff;
-height: 400px;
+height: 20px;
 margin: 0;
 padding: 200px 0 260px 0;
 background-size: cover;
@@ -29,13 +29,13 @@ section.work {
    float: right;
  }
  .emblem {
-   background-color: #437c49;
+   background-color: #90afc5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2a3132;
    border-width: 3px;
    box-shadow:2px 0px 5.5px;
    margin-bottom: 10px;
