--- a/css/projects.css
+++ b/css/projects.css
@@ -43,7 +43,7 @@ body {font-family: Oswald;margin:0}
   color: #f2f2f2;
   font-size: 18px;
   padding: 8px 12px;
-  position: absolute;
+  /*position: absolute;*/
   bottom: 8px;
   width: 100%;
   text-align: center;
