--- a/css/classes.css
+++ b/css/classes.css
@@ -53,7 +53,7 @@ background-size: cover;
   margin-bottom: 20px;
 }
 .tag:hover {
-  background-color: #2A3132;
+  background-color: #336b87;
   text-decoration: underline;
 
 }
