--- a/css/cte.css
+++ b/css/cte.css
@@ -26,15 +26,15 @@ background-size: cover;
   box-shadow:0px 0px 0px;
 }
 #left:hover {
-  background-color: #90afc5;
+  background-color: #336b87;
 
 }
 #center:hover {
-  background-color: #90afc5;
+  background-color: #336b87;
 
 }
 #right:hover {
-  background-color: #90afc5;
+  background-color: #336b87;
 
 }
 #center {
