--- a/css/teachers.css
+++ b/css/teachers.css
@@ -31,13 +31,13 @@ section.content {
    height: 150px;
  }
  .one, .three, .five {
-  background-color: #437c49;
+  background-color: #90afc5;
   border-style: solid;
   border-top-style:solid;
   border-bottom-style:solid;
   border-left-style:none;
   border-right-style:none;
-  border-color:#791313;
+  border-color:#2a3132;
    border-width: 3px;
-   box-shadow:2px 0px 5.5px;
+   box-shadow:0px 0px 0px;
  }
