--- a/css/projects.css
+++ b/css/projects.css
@@ -40,7 +40,7 @@ body {font-family: Oswald;margin:0}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: #2a3132;
   font-size: 18px;
   padding: 8px 12px;
   /*position: absolute;*/
@@ -51,7 +51,7 @@ body {font-family: Oswald;margin:0}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #2a3132;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
