--- a/css/tsa.css
+++ b/css/tsa.css
@@ -42,7 +42,7 @@ section.work {
 }
 section.content1 {
  background-color: #ffffff;
- color: #90afc5;
+ color: #333333;
  height: 2100px;
  margin: 0 auto;
  overflow: hidden;
