--- a/css/projects.css
+++ b/css/projects.css
@@ -51,7 +51,7 @@ body {font-family: Oswald;margin:0}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #2a3132;
+  color: #ffffff;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
